# zmonitors

./: README.adoc  meson.build
backend/: backend.c  backend.h  buffer.c  buffer.h  cuboid-window.c  cuboid-window.h  data-device.c  data-device.h  data-offer.c  data-offer.h  data-source.c  data-source.h  frame-callback.c  frame-callback.h  keyboard.c  keyboard.h  meson.build  opengl-component.c  opengl-component.h  opengl-shader-program.c  opengl-shader-program.h  opengl-texture.c  opengl-texture.h  opengl-vertex-buffer.c  opengl-vertex-buffer.h  ray.c  ray.h  virtual-object.c  virtual-object.h
docs/: CONTRIBUTING.adoc
include/: zmonitors-backend.h  zmonitors-server.h  zmonitors-types.h  zmonitors-util.h  zmonitors.h
protocols/: meson.build
server/: buffer.c  buffer.h  compositor.c  compositor.h  cursor-sprite.c  cursor-sprite.h  data-device-manager.c  data-device-manager.h  data-device.c  data-device.h  data-offer.c  data-offer.h  data-source.c  data-source.h  drag-grab.c  drag-grab.h  frame-callback.c  frame-callback.h  keyboard-client.c  keyboard-client.h  keyboard.c  keyboard.h  meson.build  move-grab.c  move-grab.h  output.c  output.h  pixel-buffer.c  pixel-buffer.h  pixman-helper.h  pointer-client.c  pointer-client.h  pointer.c  pointer.h  region.c  region.h  seat.c  seat.h  surface.c  surface.h  (+16 more)
util/: cglm.c  fd.c  list.c  log.c  meson.build  weak-ref.c
zmonitors/: app.c  app.h  data-device-manager.h  data-offer-proxy.c  data-offer-proxy.h  data-source-proxy.c  data-source-proxy.h  intersect.c  intersect.h  main.c  meson.build  monitor.h  seat.c  seat.h  ui.h
zmonitors/data-device/: data-device.c  data-device.h  data-source.c  data-source.h  manager.c  manager.h  meson.build
zmonitors/monitor/: control-bar.c  control-bar.frag  control-bar.h  control-bar.vert  meson.build  monitor-internal.h  monitor.c  screen.c  screen.frag  screen.h  screen.vert
zmonitors/ui/: base.c  base.h  meson.build  paper.c  root.c  root.h
